--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -27,4 +27,4 @@ jobs:
         pip install -r requirements.txt
     - name: Run Tests
       run: |
-        coverage run manage.py test && coverage report
+        python manage.py test
