--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -26,5 +26,14 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Run Tests
+      env:
+        SECRET_KEY: ${{secrets.SECRET_KEY}}
+        ADMIN_SITE_URL: ${{secrets.ADMIN_SITE_URL}}
+        DEBUG: ${{secrets.DEBUG}}
+        USER: ${{secrets.USER}}
+        PASSWORD: ${{secrets.PASSWORD}}
+        HOST: ${{secrets.HOST}}
+        PORT: ${{secrets.PORT}}
+        NAME: ${{secrets.NAME}}
       run: |
-        python manage.py test
+        coverage run manage.py test && coverage report
