--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -35,5 +35,8 @@ jobs:
         HOST: ${{secrets.HOST}}
         PORT: ${{secrets.PORT}}
         NAME: ${{secrets.NAME}}
+        DEFAULT_FROM_EMAIL: ${{secrets.DEFAULT_FROM_EMAIL}}
+        MAILJET_API_KEY: ${{secrets.MAILJET_API_KEY}}
+        MAILJET_SECRET_KEY: ${{secrets.MAILJET_SECRET_KEY}}
       run: |
         coverage run manage.py test && coverage report
