--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+africastalking==1.2.8
 asgiref==3.8.1
 attrs==23.2.0
 certifi==2024.8.30
@@ -21,6 +22,7 @@ PyYAML==6.0.1
 referencing==0.35.1
 requests==2.32.3
 rpds-py==0.18.1
+schema==0.7.7
 sqlparse==0.5.0
 tzdata==2024.1
 uritemplate==4.1.1
