--- a/requirements.txt
+++ b/requirements.txt
@@ -12,17 +12,21 @@ django-rest-knox==5.0.1
 django-rest-passwordreset==1.4.1
 djangorestframework==3.15.1
 drf-spectacular==0.27.2
+factory_boy==3.3.1
+Faker==30.0.0
 idna==3.10
 inflection==0.5.1
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
 psycopg2-binary==2.9.9
+python-dateutil==2.9.0.post0
 python-decouple==3.8
 PyYAML==6.0.1
 referencing==0.35.1
 requests==2.32.3
 rpds-py==0.18.1
 schema==0.7.7
+six==1.16.0
 sqlparse==0.5.0
 tzdata==2024.1
 uritemplate==4.1.1
