--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ attrs==23.2.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
 coverage==7.6.1
+dj-database-url==2.2.0
 dj-rest-auth==6.0.0
 Django==5.0.6
 django-allauth==65.0.1
@@ -28,6 +29,7 @@ rpds-py==0.18.1
 schema==0.7.7
 six==1.16.0
 sqlparse==0.5.0
+typing_extensions==4.12.2
 tzdata==2024.1
 uritemplate==4.1.1
 urllib3==2.2.3
