--- a/requirements.txt
+++ b/requirements.txt
@@ -15,10 +15,12 @@ djangorestframework==3.15.1
 drf-spectacular==0.27.2
 factory_boy==3.3.1
 Faker==30.0.0
+gunicorn==23.0.0
 idna==3.10
 inflection==0.5.1
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
+packaging==24.1
 psycopg2-binary==2.9.9
 python-dateutil==2.9.0.post0
 python-decouple==3.8
@@ -33,3 +35,4 @@ typing_extensions==4.12.2
 tzdata==2024.1
 uritemplate==4.1.1
 urllib3==2.2.3
+whitenoise==6.7.0
